# wordle-solver

./: Cargo.toml  README.md
src/: lib.rs  main.rs  precomp.rs  precompute.rs  stats.rs
src/play/: mod.rs
src/precompute/: mod.rs  precompute.json
src/solve/: mod.rs
src/ui/: mod.rs
