[package]
name = "wordle"
version = "0.2.1"
edition = "2021"
authors = ["Zane Duffield"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "stats"
path = "src/stats.rs"

[dependencies]
rustc-hash = "1.1.0"
rayon = "1.5.3"
rand = "0.8.5"
itertools = "0.10.3"
crossterm = "0.24.0"
clap = { version = "3.2.16", features = ["derive"] }
